[package]
name = "vm-manager"
version = "0.1.0"
edition = "2021"
authors = [ "Elliot Wasem <elliotbielwasem@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = [ "derive" ] }
serde = { version = "1.0.193", features = [ "derive" ] }
serde_yaml = "0.9.27"
shellexpand = "3.1.0"

[package.metadata.deb]
name = "vm-manager"
license-file = [ "LICENSE", "0" ]
assets = [
    # binary
    [ "target/release/vm-manager", "usr/bin/", "755" ],
    # assets
    [ "./sample_config.yml", "etc/vm-manager/", "644" ],
]

